// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`BpkAccordion should render correctly 1`] = `
<DocumentFragment>
  <div
    class="bpk-accordion bpk-accordion--default"
  >
    Accordion child
  </div>
</DocumentFragment>
`;

exports[`BpkAccordion should render correctly with custom "className" prop 1`] = `
<DocumentFragment>
  <div
    class="bpk-accordion bpk-accordion--default my-custom-class"
  >
    Accordion child
  </div>
</DocumentFragment>
`;
